lite edition updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,7 +382,7 @@ main {
   z-index: -1;
 }
 
-.info_more-btn:hover,
+.info_more-btn:hover { background: var(--bg-gradient-yellow-1); transform: scale(1.1);}
 .info_more-btn:focus { background: var(--bg-gradient-yellow-1); }
 
 .info_more-btn:hover::before,
@@ -400,6 +400,7 @@ main {
   opacity: 1;
   visibility: visible;
 }
+
 
 .contacts-list {
   display: grid;
@@ -445,10 +446,11 @@ main {
 .social-item .social-link {
   color: var(--light-gray-70);
   font-size: 18px;
+  transition: var(--transition-1);
 }
 
 
-.social-item .social-link:hover { color: var(--light-gray); }
+.social-item .social-link:hover { color: var(--light-gray); transform: scale(1.174751);}
 
 
 
@@ -483,13 +485,13 @@ main {
   color: var(--light-gray);
   font-size: var(--fs-8);
   padding: 20px 7px;
-  transition: color var(--transition-1);
+  transition: var(--transition-1);
 }
 
-.navbar-link:hover,
+.navbar-link:hover { color: var(--light-gray-70); transform: scale(1.25); }
 .navbar-link:focus { color: var(--light-gray-70); }
 
-.navbar-link.active { color: var(--orange-yellow-crayola); }
+.navbar-link.active { color: var(--orange-yellow-crayola); transform: scale(1.23); }
 
 
 
@@ -610,7 +612,6 @@ main {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-
 
 /**
  * #testimonials-modal
@@ -1066,16 +1067,18 @@ main {
   height: 200px;
   border-radius: 12px;
   overflow: hidden;
+  background: white;
 }
 
 .publication-banner-box img {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   object-fit: cover;
   transition: var(--transition-1);
+  margin: auto;
 }
 
-.publication-post-item > a:hover .publication-banner-box img { transform: scale(1.1); }
+.publication-post-item > a:hover .publication-banner-box img { transform: scale(1.05); }
 
 .publication-content { padding: 15px; }
 
