--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1071,7 +1071,7 @@ main {
 }
 
 .publication-banner-box img {
-  /* width: 100%; */
+  width: 100%;
   height: 100%;
   object-fit: cover;
   transition: var(--transition-1);
