--- a/assets/css/style-dark.css
+++ b/assets/css/style-dark.css
@@ -311,6 +311,7 @@ main {
   margin: 15px 12px;
   margin-bottom: 75px;
   min-width: 259px;
+  transition: var(--transition-2);
 }
 
 
@@ -325,7 +326,7 @@ main {
   margin-bottom: 15px;
   max-height: 112px;
   overflow: hidden;
-  transition: var(--transition-2);
+  /* transition: var(--transition-2); */
 }
 
 .sidebar.active { max-height: 405px; }
@@ -371,7 +372,7 @@ main {
   right: -30px;
   border-radius: 0 15px;
   font-size: 16px;
-  color: var(--dark-gray);
+  color: var(--white-1);
   padding: 10px;
   transition: var(--transition-1);
   z-index: 1;
@@ -381,6 +382,7 @@ main {
   position: absolute;
   inset: 0px;
   border-radius: inherit;
+  color: var(--white-1);
   transition: var(--transition-1);
   z-index: -1;
 }
@@ -390,6 +392,7 @@ main {
 
 .theme-btn:hover::before,
 .theme-btn:focus::before { color: var(--orange-yellow-crayola); }
+
 
 /* .info_more-btn {
   position: absolute;
@@ -1362,7 +1365,12 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .clients-item { min-width: calc(33.33% - 10px); }
-
+  .theme-btn {
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    padding: 15px 15px;
+  }
 
 
   /**
@@ -1415,6 +1423,12 @@ textarea.form-input::-webkit-resizer { display: none; }
     width: 520px;
     margin-inline: auto;
     padding: 30px;
+  }
+  .theme-btn {
+    position: absolute;
+    top: -30px;
+    right: -30px;
+    padding: 15px 15px;
   }
 
   .article-title {
@@ -1687,7 +1701,12 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .sidebar, article { width: 700px; }
-
+  .theme-btn {
+    position: absolute;
+    top: -30px;
+    right: -30px;
+    padding: 15px 15px;
+  }
   .has-scrollbar::-webkit-scrollbar-button { width: 100px; }
 
 
@@ -1808,7 +1827,12 @@ textarea.form-input::-webkit-resizer { display: none; }
     width: 950px;
     box-shadow: var(--shadow-5);
   }
-
+  .theme-btn {
+    position: absolute;
+    top: -30px;
+    right: -30px;
+    padding: 15px 15px;
+  }
 
 
   /**
@@ -1930,7 +1954,12 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .sidebar, article { width: auto; }
-
+  .theme-btn {
+    position: absolute;
+    top: -60px;
+    right: -30px;
+    padding: 15px 15px;
+  }
   article { min-height: 100%; }
 
 
