--- a/assets/css/style-light.css
+++ b/assets/css/style-light.css
@@ -504,7 +504,7 @@ main {
   left: 0;
   width: 100%;
   /* background: hsla(240, 1%, 17%, 0.75); */
-  background: hsl(45, 1%, 80%);
+  background: hsl(45, 1%, 80%, 0.7);
   backdrop-filter: blur(10px);
   border: 1px solid var(--jet);
   border-radius: 12px 12px 0 0;
