optimized for tiny screens

--- a/assets/css/style-dark.css
+++ b/assets/css/style-dark.css
@@ -1358,6 +1358,43 @@ textarea.form-input::-webkit-resizer { display: none; }
  * responsive larger than 450px screen
  */
 
+ @media (max-width: 450px) {
+
+  /**
+   * client
+   */
+
+  .clients-item { min-width: calc(33.33% - 10px); }
+  
+  .theme-btn {
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    padding: 15px 15px;
+  }
+  
+  .info-content .title {
+    color: var(--white-1);
+    background: var(--onyx);
+    font-size: var(--fs-8);
+    font-weight: var(--fw-300);
+    width: 100%;
+    padding: 3px 12px;
+    border-radius: 8px;
+  }
+
+  .navbar-list { gap: 10px; }
+
+  /**
+   * #PORTFOLIO, BLOG 
+   */
+
+  .project-img,
+  .blog-banner-box { height: auto; }
+  .publication-banner-box { height: auto; }
+
+}
+
 @media (min-width: 450px) {
 
   /**
